--- a/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
+++ b/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
@@ -44,6 +44,7 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
+        <!--Menu-->
         <Menu Grid.Row="0" Grid.ColumnSpan="4" Height="20">
 
             <MenuItem Header="_Poster">
@@ -97,6 +98,7 @@
 
         </Menu>
 
+        <!-- Pan Buttons and Map Display Zoom -->
         <Grid Grid.Row="1" Grid.Column="0" x:Name="colLeft">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -114,37 +116,16 @@
                 <Button Name="btnGoDown" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10,5" Command="local:CustomCommands.PanDown">Down</Button>
             </StackPanel>
 
-            <local:MapDisplayZoomControl x:Name="mapDisplayZoom1" Grid.Row="1" Margin="0,10"/>
-            <!--<Border Grid.Row="1" BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="0,10">
-                
-                <StackPanel  Orientation="Vertical">
-                    <Button Click="ButtonSetMinZoom_Click" >Min</Button>
-                    <TextBlock Margin="10,10,0,5"  >Zoom:</TextBlock>
-                    <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,5" x:Name="dispSecZoom">
-                        <TextBlock x:Name="txtblkZoomValue" Margin="5,95,2,0" >10</TextBlock>
-                        <ScrollBar x:Name="scrBarZoom" Margin="5,0,5,5" Orientation="Vertical" Height="200" Minimum="1" Maximum="20" Value="9.5"/>
-                    </StackPanel>
-                    <Button Click="ButtonSetMaxZoom_Click">Max</Button>
-                </StackPanel>
-                
-            </Border>-->
+            <local:MapDisplayZoomControl Grid.Row="1" Margin="0,10"  x:Name="mapDisplayZoom1"/>
 
         </Grid>
 
-        <!--<DockPanel Grid.Row="1" Grid.Column="1" x:Name="colCenter">
-
-            <ScrollBar DockPanel.Dock="Bottom" Orientation="Horizontal" x:Name="HScrollBar"/>
-            <ScrollBar DockPanel.Dock="Right" Orientation="Vertical" x:Name="VScrollBar"/>
-
-            <Border BorderThickness="1" BorderBrush="Black">
-                <local:MapDisplayControl x:Name="mapDisplay1"></local:MapDisplayControl>
-            </Border>
-        </DockPanel>-->
-
+        <!-- Scrollable Map Display -->
         <Grid Grid.Row="1" Grid.Column="1" x:Name="colCenter">
             <local:MapScrollControl x:Name="mapScroll1" Margin="5"></local:MapScrollControl>
         </Grid>
 
+        <!-- Coords, Calc and Colors -->
         <Grid Grid.Row="1" Grid.Column="2" x:Name="colRight">
 
             <Grid.RowDefinitions>
@@ -170,11 +151,13 @@
 
         </Grid>
 
+        <!-- To Do: Job Tree -->
+        
+        <!-- Histogram -->
         <Grid Grid.Row="1" Grid.Column="3" x:Name="colFarRight" Visibility="Collapsed">
-            <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" >
-                <local:JobTreeControl/>
+            <Border  Margin="0,5,5,5" >
+                <local:JobTreeControl x:Name="jobTree1"></local:JobTreeControl>
             </Border>
-
         </Grid>
 
     </Grid>
